# xml-glib

./: README.md  meson.build
doc/: meson.build  xml-glib-docs.xml
doc/xml/: meson.build
example/: meson.build  serializable.c  simple-deserialize.c  simple-gobject.c  simple-serialize.c
example/gnote/: gn-note.c  gn-note.h  gn-text.c  gn-text.h  main.c  meson.build
src/: meson.build  xml-glib-version.h.in  xml-glib.h  xml-gobject.c  xml-serializable.c  xml-serializable.h
test/: address-test.c  meson.build  serializable.c  simple-deserialize.c  simple-gobject.c  simple-gobject.h  simple-serialize.c  xml-address.c  xml-address.h  xml-addresslist.c  xml-addresslist.h
xml-glib/: meson.build  xml-glib-version.h.in  xml-gobject-private.h  xml-gobject.c  xml-gobject.h  xml-serializable.c  xml-serializable.h
